--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<HTML>
-<BODY>
-Testing
-</BODY>
-</HTML>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <div style="width:100%;">
+            <div style="float:left; width:40%;">
+                <img src="starinspo.jpg">
+                <img width="60%" style="margin-left: auto; margin-right: auto; display: block;" src="landingpage.png">
+            </div>
+            <div style="float:right; width:60%;">
+                <iframe height="99%" width="100%" frameBorder="0" src="https://idealanding.us19.list-manage.com/subscribe?u=4c3cfd14f04b96454aa2f3c3b&id=5de3e81773"></iframe>
+            </div>
+        </div>
+    </body>
+</html>
